--- a/assets/css/all-nocdn.css
+++ b/assets/css/all-nocdn.css
@@ -775,3 +775,580 @@ pre.code, code {
 		padding: 0;
 	}
 }
+
+/*! The MIT License (MIT)
+
+Copyright (c) 2014 Prince John Wesley <princejohnwesley@gmail.com>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+**/.minimap,.miniregion{position:fixed;cursor:pointer}.minimap{z-index:10000;font-size:1em}.miniregion{z-index:10001;background:0 0;border:2px solid silver;border-radius:10%;cursor:-webkit-grab;cursor:-moz-grab}.miniregion.dragging{cursor:-webkit-grabbing;cursor:-moz-grabbing}.miniregion:hover{box-shadow:0 0 .4em #a9a9a9}.noselect{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+
+div.prompt {
+  padding: 0.6em;
+  font-size: 13px;
+  background-color: #E9E9E9;
+  margin-right: 1em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+div.output_prompt {
+  /* 5px right shift to account for margin in parent container */
+  margin: 0 5px 0 0px;
+}
+
+div.output_area pre {
+  font-size: 13px;
+}
+
+div.text_cell_render {
+  padding: 0px;
+  color: #333333;
+}
+
+.rendered_html p {
+  text-align: left;
+}
+
+.rendered_html ul {
+  margin: 0 0 12px 25px;
+}
+
+.rendered_html :visited {
+  text-decoration: none;
+}
+
+.rendered_html :link {
+  text-decoration: none;
+}
+
+.rendered_html pre, .rendered_html code {
+  background-color: #DDDDDD;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  padding-top: 0.05em;
+  padding-bottom: 0.05em;
+  margin: 1em 0em;
+  font-size: 14px;
+}
+
+.page-content > .content p {
+  margin: 0 0 0px;
+}
+
+.highlight .hll { background-color: #ffffcc }
+.highlight  { background: #f8f8f8; }
+.highlight .c { color: #408080; font-style: italic } /* Comment */
+.highlight .err { border: 1px solid #FF0000 } /* Error */
+.highlight .k { color: #008000; font-weight: bold } /* Keyword */
+.highlight .o { color: #666666 } /* Operator */
+.highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #BC7A00 } /* Comment.Preproc */
+.highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
+.highlight .gd { color: #A00000 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #FF0000 } /* Generic.Error */
+.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #00A000 } /* Generic.Inserted */
+.highlight .go { color: #888888 } /* Generic.Output */
+.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.highlight .gt { color: #0044DD } /* Generic.Traceback */
+.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
+.highlight .kp { color: #008000 } /* Keyword.Pseudo */
+.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #B00040 } /* Keyword.Type */
+.highlight .m { color: #666666 } /* Literal.Number */
+.highlight .s { color: #BA2121 } /* Literal.String */
+.highlight .na { color: #7D9029 } /* Name.Attribute */
+.highlight .nb { color: #008000 } /* Name.Builtin */
+.highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */
+.highlight .no { color: #880000 } /* Name.Constant */
+.highlight .nd { color: #AA22FF } /* Name.Decorator */
+.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
+.highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+.highlight .nf { color: #0000FF } /* Name.Function */
+.highlight .nl { color: #A0A000 } /* Name.Label */
+.highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+.highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
+.highlight .nv { color: #19177C } /* Name.Variable */
+.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mf { color: #666666 } /* Literal.Number.Float */
+.highlight .mh { color: #666666 } /* Literal.Number.Hex */
+.highlight .mi { color: #666666 } /* Literal.Number.Integer */
+.highlight .mo { color: #666666 } /* Literal.Number.Oct */
+.highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
+.highlight .sc { color: #BA2121 } /* Literal.String.Char */
+.highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+.highlight .s2 { color: #BA2121 } /* Literal.String.Double */
+.highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+.highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */
+.highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+.highlight .sx { color: #008000 } /* Literal.String.Other */
+.highlight .sr { color: #BB6688 } /* Literal.String.Regex */
+.highlight .s1 { color: #BA2121 } /* Literal.String.Single */
+.highlight .ss { color: #19177C } /* Literal.String.Symbol */
+.highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #19177C } /* Name.Variable.Class */
+.highlight .vg { color: #19177C } /* Name.Variable.Global */
+.highlight .vi { color: #19177C } /* Name.Variable.Instance */
+.highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
+
+/** HACKWRITE THEMING **/
+/* Solarized colors */
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix {
+  display: inline-block;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+/* start commented backslash hack \*/
+* html .clearfix {
+  height: 1%;
+}
+.clearfix {
+  display: block;
+}
+/* close commented backslash hack */
+/* One size */
+@media all and (min-width: 960px) {
+  body {
+    font-size: 30px;
+  }
+}
+@media all and (max-width: 959px) and (min-width: 600px) {
+  body {
+    font-size: 20px;
+  }
+}
+@media all and (max-width: 599px) and (min-width: 50px) {
+  body {
+    font-size: 16px;
+  }
+}
+body {
+  background-color: #1b1b1b;
+  color: #8d8d8d;
+  font-family: "Emilbus Mono", Menlo, Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
+  line-height: 1.4;
+  padding: 1em;
+}
+#header {
+  background-color: #000000;
+  width: calc(98vw);
+  margin-top: 0;
+  margin-bottom: 0;
+  position: fixed;
+  left: 0;
+  top: 0;
+  font-size: .75em;
+  font-weight: normal;
+  padding-top: .5em;
+  padding-bottom: .5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  z-index: 9999;
+  display: inline-block;
+  display: block;
+}
+#header #brand {
+  float: left;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: normal;
+}
+#header #menu {
+  float: right;
+}
+#header #menu ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: normal;
+}
+#header:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.entry-title,
+menu,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 1em;
+}
+pre,
+code,
+pre.code,
+pre code,
+.code,
+.literal-block {
+  background-color: #252525;
+}
+pre,
+pre.code,
+pre code,
+.literal-block {
+  margin-left: -4em;
+  margin-right: -4em;
+  padding-left: 4em;
+  padding-right: 4em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+a {
+  color: #268bd2;
+  text-decoration: underline !important;
+  position: relative;
+}
+a:link {
+  color: #268bd2;
+}
+a:visited {
+  color: #268bd2;
+}
+a:hover {
+  color: #268bd2 !important;
+  text-decoration: underline;
+  border-bottom: solid 2px #268bd2;
+}
+.headers {
+  color: #cb4b16 !important;
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+.postpage .entry-title a,
+.postpage .entry-title a:hover {
+  color: #cb4b16 !important;
+  text-decoration: none;
+  font-weight: bold;
+  text-decoration: none !important;
+}
+h4,
+h5,
+h6 {
+  color: #cb4b16 !important;
+  text-decoration: none;
+  font-weight: normal;
+}
+.markup-reveal {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+}
+.entry-content p,
+.entry-summary p {
+  margin: 0 ;
+  position: relative;
+}
+.entry-content p:before,
+.entry-summary p:before,
+.entry-content p:after,
+.entry-summary p:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+}
+.entry-content p:before,
+.entry-summary p:before {
+  content: "";
+  position: absolute;
+  left: -3ch;
+}
+.entry-content p:after,
+.entry-summary p:after {
+  white-space: pre;
+  content: " \a\a";
+}
+article h3:before,
+article h4:before,
+article h5:before,
+article h6:before {
+  font-weight: normal;
+  font-size: .8em;
+  color: #86310f;
+}
+article h1 {
+  position: relative;
+  display: table-cell;
+  padding: 1em 0 2em;
+  margin: 0;
+  overflow: hidden;
+}
+article h1:after {
+  position: absolute;
+  bottom: 1em;
+  left: 0;
+  content: "====================================================================================================";
+}
+article h2 {
+  position: relative;
+  display: table-cell;
+  padding: 0 0 2em;
+  margin: 0;
+  overflow: hidden;
+}
+article h2:before {
+  white-space: pre;
+  content: "\a";
+  display: block;
+}
+article h2:after {
+  position: absolute;
+  bottom: 1em;
+  left: 0;
+  word-wrap: normal;
+  content: "\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011";
+}
+article h3:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  content: " </h3>";
+}
+article h4:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  content: " </h4>";
+}
+article h5:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  content: " </h5>";
+}
+article h6:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  content: " </h6>";
+}
+article ul {
+  margin-left: none;
+  padding-left: 2ch;
+}
+article ul,
+article ul li {
+  margin-left: none;
+  list-style-type: none;
+}
+article ul li:before {
+  content: " - ";
+  color: #6c71c4;
+}
+article ul li li:before {
+  content: " -- ";
+}
+article ul li li li:before {
+  content: " --- ";
+}
+article ul li li li li:before {
+  content: " ---- ";
+}
+ol {
+  counter-reset: item;
+  padding-left: 2ch;
+}
+ol li {
+  padding-left: 0;
+  display: block;
+}
+ol li:before {
+  content: counter(item) ". ";
+  counter-increment: item;
+  color: #6c71c4;
+}
+ol ol {
+  counter-reset: nest-item;
+}
+ol ol li:before {
+  content: counter(nest-item) ". ";
+  counter-increment: nest-item;
+}
+ol ol ol {
+  counter-reset: nest-nest-item;
+}
+ol ol ol li:before {
+  content: counter(nest-nest-item) ". ";
+  counter-increment: nest-nest-item;
+}
+ol ul li:before {
+  content: " - ";
+  counter-increment: none;
+}
+.metadata:before,
+.metadata:after {
+  color: #676767;
+  white-space: pre-wrap;
+  display: block;
+}
+.metadata:before {
+  content: "<!--";
+}
+.metadata:after {
+  content: "-->\a\a";
+  white-space: pre;
+}
+.metadata p {
+  display: block;
+  margin: 0;
+  padding-left: 2ch;
+}
+.metadata p:before {
+  color: #676767;
+}
+.metadata p:after {
+  content: none;
+}
+.metadata .byline:before {
+  color: #676767;
+  content: " .. author:";
+}
+.metadata .dateline:before {
+  content: " .. published: ";
+}
+.metadata .sourceline:before {
+  content: " .. view_source: ";
+}
+/*
+blockquote {
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 3ch;
+	border-left: 1px solid @base02;
+
+	&:before, &:after {
+		.markup-reveal;
+		display: block;
+	}
+	&:before {
+		content: "<blockquote>";
+	}
+	&:after {
+		content: "</blockquote>"
+	}
+	p {
+		&:before, &:after {
+			content: none !important;
+		}
+	}
+	cite {
+		color: @base01;
+		font-style: italic;
+		display: block;
+		margin-left: 2ch;
+
+		&:before {
+			content: "— ";
+		}
+	}
+
+}
+*/
+blockquote {
+  position: relative;
+  padding-left: 17px;
+  padding-left: 4ch;
+  overflow: hidden;
+}
+blockquote:after {
+  content: ">\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>";
+  white-space: pre;
+  color: #676767;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+hr {
+  position: relative;
+  height: 2em;
+  width: 100%;
+  border: 0;
+}
+hr:after {
+  content: "\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\a\a";
+  white-space: pre;
+  position: absolute;
+  color: #676767;
+  top: 0;
+  left: 0;
+  width: 100%;
+  word-wrap: break-word;
+  text-align: center;
+}
+article.postpage header:before {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  display: block;
+  content: "<article>";
+}
+.postpage .entry-content:after {
+  font-size: .75em;
+  font-weight: lighter;
+  color: #252525;
+  display: block;
+  content: "</article>";
+}
+.commentline {
+  display: none;
+}
+em,
+strong {
+  color: #6c71c4;
+}
+em:before,
+em:after {
+  content: "_";
+  display: inline;
+}
+strong:before,
+strong:after {
+  content: "**";
+  display: inline;
+}
