--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,6 +121,8 @@ pre code,
 }
 a {
   color: #268bd2;
+  text-decoration: underline !important;
+  position: relative;
 }
 a:link {
   color: #268bd2;
@@ -131,6 +133,7 @@ a:visited {
 a:hover {
   color: #268bd2 !important;
   text-decoration: underline;
+  border-bottom: solid 2px #268bd2;
 }
 .headers {
   color: #cb4b16 !important;
@@ -144,6 +147,7 @@ h3,
   color: #cb4b16 !important;
   text-decoration: none;
   font-weight: bold;
+  text-decoration: none !important;
 }
 h4,
 h5,
@@ -157,31 +161,30 @@ h6 {
   font-weight: lighter;
   color: #252525;
 }
-.entry-content p {
+.entry-content p,
+.entry-summary p {
+  margin: 0 ;
   position: relative;
 }
 .entry-content p:before,
-.entry-content p:after {
+.entry-summary p:before,
+.entry-content p:after,
+.entry-summary p:after {
   font-size: .75em;
   font-weight: lighter;
   color: #252525;
 }
-.entry-content p:before {
-  content: "<p>";
+.entry-content p:before,
+.entry-summary p:before {
+  content: "";
   position: absolute;
   left: -3ch;
 }
-.entry-content p:after {
-  content: "</p>";
+.entry-content p:after,
+.entry-summary p:after {
+  white-space: pre;
+  content: " \a\a";
 }
-article h2,
-article h3,
-article h4,
-article h5,
-article h6 {
-  margin-left: -1ch;
-}
-article h2:before,
 article h3:before,
 article h4:before,
 article h5:before,
@@ -190,46 +193,37 @@ article h6:before {
   font-size: .8em;
   color: #86310f;
 }
-body {
-  counter-reset: h2;
+article h1 {
+  position: relative;
+  display: table-cell;
+  padding: 1em 0 2em;
+  margin: 0;
+  overflow: hidden;
 }
-h2 {
-  counter-reset: h3;
+article h1:after {
+  position: absolute;
+  bottom: 1em;
+  left: 0;
+  content: "====================================================================================================";
 }
-h3 {
-  counter-reset: h4;
+article h2 {
+  position: relative;
+  display: table-cell;
+  padding: 0 0 2em;
+  margin: 0;
+  overflow: hidden;
 }
-h4 {
-  counter-reset: h5;
-}
-h5 {
-  counter-reset: h6;
-}
-h2:before {
-  counter-increment: h2;
-  content: counter(h2) " — ";
-}
-h3:before {
-  counter-increment: h3;
-  content: counter(h2) "." counter(h3) " — ";
-}
-h4:before {
-  counter-increment: h4;
-  content: counter(h2) "." counter(h3) "." counter(h4) " — ";
-}
-h5:before {
-  counter-increment: h5;
-  content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) " — ";
-}
-h6:before {
-  counter-increment: h6;
-  content: counter(h2) "." counter(h3) "." counter(h4) "." counter(h5) "." counter(h6) " — ";
+article h2:before {
+  white-space: pre;
+  content: "\a";
+  display: block;
 }
 article h2:after {
-  font-size: .75em;
-  font-weight: lighter;
-  color: #252525;
-  content: " </h2>";
+  position: absolute;
+  bottom: 1em;
+  left: 0;
+  word-wrap: normal;
+  content: "\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011";
 }
 article h3:after {
   font-size: .75em;
@@ -318,7 +312,8 @@ ol ul li:before {
   content: "<!--";
 }
 .metadata:after {
-  content: "-->";
+  content: "-->\a\a";
+  white-space: pre;
 }
 .metadata p {
   display: block;
@@ -341,37 +336,71 @@ ol ul li:before {
 .metadata .sourceline:before {
   content: " .. view_source: ";
 }
+/*
 blockquote {
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 3ch;
-  border-left: 1px solid #252525;
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 3ch;
+	border-left: 1px solid @base02;
+
+	&:before, &:after {
+		.markup-reveal;
+		display: block;
+	}
+	&:before {
+		content: "<blockquote>";
+	}
+	&:after {
+		content: "</blockquote>"
+	}
+	p {
+		&:before, &:after {
+			content: none !important;
+		}
+	}
+	cite {
+		color: @base01;
+		font-style: italic;
+		display: block;
+		margin-left: 2ch;
+
+		&:before {
+			content: "— ";
+		}
+	}
+
 }
-blockquote:before,
+*/
+blockquote {
+  position: relative;
+  padding-left: 17px;
+  padding-left: 4ch;
+  overflow: hidden;
+}
 blockquote:after {
-  font-size: .75em;
-  font-weight: lighter;
-  color: #252525;
-  display: block;
-}
-blockquote:before {
-  content: "<blockquote>";
-}
-blockquote:after {
-  content: "</blockquote>";
-}
-blockquote p:before,
-blockquote p:after {
-  content: none !important;
-}
-blockquote cite {
+  content: ">\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>";
+  white-space: pre;
   color: #676767;
-  font-style: italic;
-  display: block;
-  margin-left: 2ch;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-blockquote cite:before {
-  content: "— ";
+hr {
+  position: relative;
+  height: 2em;
+  width: 100%;
+  border: 0;
+}
+hr:after {
+  content: "\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\2011\a\a";
+  white-space: pre;
+  position: absolute;
+  color: #676767;
+  top: 0;
+  left: 0;
+  width: 100%;
+  word-wrap: break-word;
+  text-align: center;
 }
 article.postpage header:before {
   font-size: .75em;
@@ -389,4 +418,18 @@ article.postpage header:before {
 }
 .commentline {
   display: none;
+}
+em,
+strong {
+  color: #6c71c4;
+}
+em:before,
+em:after {
+  content: "_";
+  display: inline;
+}
+strong:before,
+strong:after {
+  content: "**";
+  display: inline;
 }
