--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*
-	Copyright © 2014-2015 Daniel Aleksandersen and others.
+	Copyright © 2014-2016 Daniel Aleksandersen and others.
 
 	Permission is hereby granted, free of charge, to any
 	person obtaining a copy of this software and associated
@@ -26,11 +26,17 @@
 	SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
 
-
+body {
+	color: #4F5151;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 17px;
+	line-height: 1.4;
+	padding: 1em;
+}
 
 #container {
 	margin: 1em auto;
-	max-width: 60ch;
+	max-width: 770px;
 }
 #menu ul,
 #menu ul li,
@@ -84,7 +90,7 @@
 }
 
 .entry-title {
-
+	font-size: 2em;
 }
 
 .posttranslations h3:last-child {
@@ -112,9 +118,9 @@
 .postpromonav .tags {
 	text-align: center;
 }
-
+.metadata p:before,
 .postpromonav .tags li:before,
-.postlist .listdate:before {
+.postlist .listdate:after {
 	content: " — ";
 }
 .postlist li {
@@ -141,6 +147,7 @@
 	content: "← ";
 }
 
+.metadata p:first-of-type:before,
 .postpromonav .tags li:first-of-type:before {
 	content: "";
 }
@@ -166,8 +173,13 @@
 	float: right;
 }
 
-#brand {
+.metadata p {
+	display: inline;
+}
 
+#brand {
+	font-size: 3em;
+	line-height: 1;
 }
 
 /* Links */
