--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*
-	Copyright © 2014-2016 Daniel Aleksandersen and others.
+	Copyright © 2014-2015 Daniel Aleksandersen and others.
 
 	Permission is hereby granted, free of charge, to any
 	person obtaining a copy of this software and associated
@@ -120,7 +120,7 @@ body {
 }
 .metadata p:before,
 .postpromonav .tags li:before,
-.postlist .listdate:after {
+.postlist .listdate:before {
 	content: " — ";
 }
 .postlist li {
